--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <version.commons-io>2.5</version.commons-io>
         <version.apache.commons.lang3>3.4</version.apache.commons.lang3>
         <version.orika>1.5.0</version.orika>
+        <version.httpclient>4.5.3</version.httpclient>
     </properties>
 
     <dependencies>
@@ -29,6 +30,7 @@
             <artifactId>commons-io</artifactId>
             <version>${version.commons-io}</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -65,6 +67,7 @@
             <artifactId>poi</artifactId>
             <version>${version.poi}</version>
         </dependency>
+
         <!-- poi xlsx -->
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -78,6 +81,20 @@
             <artifactId>orika-core</artifactId>
             <version>${version.orika}</version>
         </dependency>
+
+        <!-- httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${version.httpclient}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>fluent-hc</artifactId>
+            <version>${version.httpclient}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
