--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <version.apache.commons.lang3>3.4</version.apache.commons.lang3>
         <version.orika>1.5.0</version.orika>
         <version.httpclient>4.5.3</version.httpclient>
+        <version.dozer>5.4.0</version.dozer>
     </properties>
 
     <dependencies>
@@ -80,6 +81,13 @@
             <groupId>ma.glasnost.orika</groupId>
             <artifactId>orika-core</artifactId>
             <version>${version.orika}</version>
+        </dependency>
+
+        <!-- dozer mapper -->
+        <dependency>
+            <groupId>net.sf.dozer</groupId>
+            <artifactId>dozer</artifactId>
+            <version>${version.dozer}</version>
         </dependency>
 
         <!-- httpclient -->
