--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     </properties>
 
     <dependencies>
-        <!-- apache utils -->
+        <!-- apache util -->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
